--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 keywords = []
-dependencies = ["diffrax", "equinox", "jax", "jaxlib", "jaxtyping", "numpyro"]
+dependencies = ["equinox", "jax", "jaxlib", "jaxtyping", "numpyro"]
 
 [project.urls]
 
